# TurboQuantKV

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __main__.py  benchmark_results.json  generate_graphs.py  report.py  run_benchmarks.py
examples/: basic_usage.py  vectordb_chromadb.py  vectordb_faiss.py  vectordb_qdrant.py
tests/: test_bitpack.py  test_cache.py  test_codebook.py  test_comparison.py  test_integration.py  test_quantizer.py  test_rotation.py
turboquantkv/: __init__.py  config.py
turboquantkv/cache/: turboquant_cache.py  turboquant_layer.py
turboquantkv/core/: bitpack.py  codebook.py  quantizer.py  rotation.py
turboquantkv/integration/: transformers_patch.py
