[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "turboquantkv"
version = "0.1.0"
description = "TurboQuant KV cache compression for LLM inference"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "transformers>=4.45.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "datasets", "accelerate"]
bench = ["datasets", "accelerate", "tqdm", "jinja2"]

[tool.setuptools.packages.find]
include = ["turboquantkv*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
